# distcloud-client

./: .git-blame-ignore-revs  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTORS.wrs  HACKING.rst  README.rst  bindep.txt  centos_dev_wheels.inc  centos_iso_image.inc  debian_trixie_iso_image_std.inc  debian_trixie_pkg_dirs_std  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
dcmanagerclient/: shell.py  utils.py
dcmanagerclient/api/: base.py  client.py
dcmanagerclient/api/v1/: alarm_manager.py  client.py  subcloud_manager.py  sw_update_options_manager.py
dcmanagerclient/commands/v1/: alarm_manager.py  base.py  subcloud_manager.py  sw_update_manager.py  sw_update_options_manager.py
dcmanagerclient/openstack/common/: __init__.py  gettextutils.py  importutils.py  uuidutils.py
dcmanagerclient/osc/: plugin.py
dcmanagerclient/tests/: base_shell_test.py  test_help_and_bash_completion.py  test_httpclient.py  test_shell.py
dcmanagerclient/tests/v1/: test_subcloud_manager.py
distributedcloud-client/: .coveragerc  .pylintrc  pylint.rc  requirements.txt  test-requirements-debian.txt  test-requirements.txt  tox.ini
distributedcloud-client/centos/: build_srpm.data  distributedcloud-client.spec
distributedcloud-client/dcmanagerclient/: __init__.py  exceptions.py  shell.py  utils.py
distributedcloud-client/dcmanagerclient/api/: base.py  client.py  (+1 more)
distributedcloud-client/debian/: dl_hook  meta_data.yaml
doc/source/: conf.py  index.rst
releasenotes/notes/: release-summary-stx201810-a13de962d7d77394.yaml
releasenotes/source/: conf.py  index.rst
(+88 files in other folders)
